rust/src/dsl_v2/parser.rs
//! Nom-based parser for DSL v2
//!
//! Parses the unified S-expression grammar into AST types.

use nom::{
    branch::alt,
    bytes::complete::{escaped_transform, tag, take_while, take_while1},
    character::complete::{alpha1, alphanumeric1, char, digit1, multispace0, multispace1, none_of},
    combinator::{all_consuming, cut, map, opt, recognize, value},
    error::{context, ContextError, ParseError as NomParseError},
    multi::{many0, many1},
    sequence::{delimited, pair, preceded, tuple},
    IResult,
};
use rust_decimal::Decimal;
use std::collections::HashMap;
use std::str::FromStr;
use uuid::Uuid;

use super::ast::*;

// ============================================================================
// Public API
// ============================================================================

/// Parse a complete DSL program from source text
///
/// Returns a structured Program AST or a human-readable error message.
///
/// # Example
/// ```ignore
/// let program = parse_program(r#"
///     (cbu.create :name "Test Fund" :jurisdiction "LU")
///     (cbu.link :cbu-id @cbu :entity-id @manager :role "InvestmentManager")
/// "#)?;
/// ```
pub fn parse_program(input: &str) -> Result<Program, String> {
    match all_consuming(program::<nom::error::VerboseError<&str>>)(input) {
        Ok((_, prog)) => Ok(prog),
        Err(nom::Err::Error(e)) | Err(nom::Err::Failure(e)) => {
            Err(nom::error::convert_error(input, e))
        }
        Err(nom::Err::Incomplete(_)) => Err("Incomplete input".to_string()),
    }
}

/// Parse a single verb call (for REPL/interactive use)
pub fn parse_single_verb(input: &str) -> Result<VerbCall, String> {
    let input = input.trim();
    match all_consuming(delimited(
        multispace0::<_, nom::error::VerboseError<&str>>,
        verb_call,
        multispace0,
    ))(input)
    {
        Ok((_, vc)) => Ok(vc),
        Err(nom::Err::Error(e)) | Err(nom::Err::Failure(e)) => {
            Err(nom::error::convert_error(input, e))
        }
        Err(nom::Err::Incomplete(_)) => Err("Incomplete input".to_string()),
    }
}

// ============================================================================
// Internal Parsers
// ============================================================================

fn program<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, Program, E> {
    let (input, _) = multispace0(input)?;
    let (input, statements) = many0(statement)(input)?;
    let (input, _) = multispace0(input)?;
    Ok((input, Program { statements }))
}

fn statement<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, Statement, E> {
    let (input, _) = multispace0(input)?;
    alt((
        map(comment, Statement::Comment),
        map(verb_call, Statement::VerbCall),
    ))(input)
}

// ============================================================================
// Comments
// ============================================================================

fn comment<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, String, E> {
    let (input, _) = tag(";;")(input)?;
    let (input, text) = take_while(|c| c != '\n')(input)?;
    let (input, _) = opt(char('\n'))(input)?;
    Ok((input, text.trim().to_string()))
}

// ============================================================================
// Verb Calls
// ============================================================================

fn verb_call<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, VerbCall, E> {
    let original_input = input;
    let start_offset = 0usize; // We'll compute offsets relative to original_input

    let (input, _) = char('(')(input)?;
    let (input, _) = multispace0(input)?;

    // Capture verb span
    let verb_start = original_input.len() - input.len();
    let (input, (domain, verb)) = word(input)?;
    let verb_end = original_input.len() - input.len();
    let verb_span = Span::new(verb_start, verb_end);

    let (input, arguments) = many0(|i| argument_with_span(i, original_input))(input)?;
    let (input, _) = multispace0(input)?;

    // Parse optional :as @symbol binding with span
    let as_binding_start = original_input.len() - input.len();
    let (input, as_binding) = opt(as_binding_parser)(input)?;
    let as_binding_end = original_input.len() - input.len();
    let as_binding_span = as_binding
        .as_ref()
        .map(|_| Span::new(as_binding_start, as_binding_end));

    let (input, _) = multispace0(input)?;
    let (input, _) = cut(context("closing parenthesis", char(')')))(input)?;

    let end_offset = original_input.len() - input.len();

    Ok((
        input,
        VerbCall {
            domain,
            verb,
            verb_span,
            arguments,
            as_binding,
            as_binding_span,
            span: Span::new(start_offset, end_offset),
        },
    ))
}

/// Parse the :as @symbol binding directive
fn as_binding_parser<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, String, E> {
    let (input, _) = tag(":as")(input)?;
    let (input, _) = multispace1(input)?;
    let (input, _) = char('@')(input)?;
    let (input, name) = identifier(input)?;
    Ok((input, name.to_string()))
}

/// Verb call parser with span tracking relative to original input
fn verb_call_with_span<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
    original_input: &'a str,
) -> IResult<&'a str, VerbCall, E> {
    let start_offset = original_input.len() - input.len();

    let (input, _) = char('(')(input)?;
    let (input, _) = multispace0(input)?;

    let verb_start = original_input.len() - input.len();
    let (input, (domain, verb)) = word(input)?;
    let verb_end = original_input.len() - input.len();
    let verb_span = Span::new(verb_start, verb_end);

    let (input, arguments) = many0(|i| argument_with_span(i, original_input))(input)?;
    let (input, _) = multispace0(input)?;

    let as_binding_start = original_input.len() - input.len();
    let (input, as_binding) = opt(as_binding_parser)(input)?;
    let as_binding_end = original_input.len() - input.len();
    let as_binding_span = as_binding
        .as_ref()
        .map(|_| Span::new(as_binding_start, as_binding_end));

    let (input, _) = multispace0(input)?;
    let (input, _) = cut(context("closing parenthesis", char(')')))(input)?;

    let end_offset = original_input.len() - input.len();

    Ok((
        input,
        VerbCall {
            domain,
            verb,
            verb_span,
            arguments,
            as_binding,
            as_binding_span,
            span: Span::new(start_offset, end_offset),
        },
    ))
}

fn word<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, (String, String), E> {
    // Use kebab_identifier for domain to support names like "service-resource"
    let (input, domain) = kebab_identifier(input)?;
    let (input, _) = char('.')(input)?;
    let (input, verb) = kebab_identifier(input)?;
    Ok((input, (domain, verb)))
}

// ============================================================================
// Arguments
// ============================================================================

/// Parse argument with span tracking relative to original input
fn argument_with_span<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
    original_input: &'a str,
) -> IResult<&'a str, Argument, E> {
    let (input, _) = multispace0(input)?;

    // Don't match :as - it's reserved for symbol binding
    if input.starts_with(":as") && input[3..].starts_with(|c: char| c.is_whitespace()) {
        return Err(nom::Err::Error(E::from_error_kind(
            input,
            nom::error::ErrorKind::Verify,
        )));
    }

    let key_start = original_input.len() - input.len();
    let (input, key) = keyword(input)?;
    let key_end = original_input.len() - input.len();
    let key_span = Span::new(key_start, key_end);

    let (input, _) = multispace1(input)?;

    let value_start = original_input.len() - input.len();
    let (input, val) = context("value", |i| value_parser_with_span(i, original_input))(input)?;
    let value_end = original_input.len() - input.len();
    let value_span = Span::new(value_start, value_end);

    Ok((
        input,
        Argument {
            key,
            key_span,
            value: val,
            value_span,
        },
    ))
}

fn keyword<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, Key, E> {
    let (input, _) = char(':')(input)?;

    // Try dotted identifier first (must have at least one dot)
    if let Ok((remaining, parts)) = dotted_identifier::<E>(input) {
        return Ok((remaining, Key::Dotted(parts)));
    }

    // Fall back to simple kebab identifier
    let (input, name) = kebab_identifier(input)?;
    Ok((input, Key::Simple(name)))
}

fn dotted_identifier<'a, E: NomParseError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, Vec<String>, E> {
    let (input, first) = simple_identifier(input)?;
    let (input, rest) = many1(preceded(char('.'), simple_identifier))(input)?;

    let mut parts = vec![first.to_string()];
    parts.extend(rest.into_iter().map(|s| s.to_string()));
    Ok((input, parts))
}

fn kebab_identifier<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, String, E> {
    recognize(pair(
        alt((alpha1, tag("_"))),
        many0(alt((alphanumeric1, tag("_"), tag("-")))),
    ))(input)
    .map(|(rest, matched)| (rest, matched.to_string()))
}

fn simple_identifier<'a, E: NomParseError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, &'a str, E> {
    recognize(pair(
        alt((alpha1, tag("_"))),
        many0(alt((alphanumeric1, tag("_")))),
    ))(input)
}

fn identifier<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, &'a str, E> {
    // Supports alphanumeric, underscores, and hyphens (kebab-case) for symbol names
    recognize(pair(
        alt((alpha1, tag("_"))),
        many0(alt((alphanumeric1, tag("_"), tag("-")))),
    ))(input)
}

// ============================================================================
// Values
// ============================================================================

fn value_parser<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, Value, E> {
    alt((
        // Order matters: try specific patterns before generic ones
        map(boolean_literal, Value::Boolean),
        map(null_literal, |_| Value::Null),
        map(attribute_ref, Value::AttributeRef),
        map(document_ref, Value::DocumentRef),
        map(reference, Value::Reference),
        // Lookup ref triplet: ("ref_type" "search_key" "pk") - must come before verb_call
        lookup_ref_triplet,
        map(string_literal, Value::String),
        number_literal, // Returns Value directly (Integer or Decimal)
        // Nested verb call - allows (verb.call ...) as a value
        map(verb_call, |vc| Value::NestedCall(Box::new(vc))),
        map(list_literal, Value::List),
        map(map_literal, Value::Map),
    ))(input)
}

/// Value parser with span tracking for nested verb calls
fn value_parser_with_span<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
    original_input: &'a str,
) -> IResult<&'a str, Value, E> {
    alt((
        // Order matters: try specific patterns before generic ones
        map(boolean_literal, Value::Boolean),
        map(null_literal, |_| Value::Null),
        map(attribute_ref, Value::AttributeRef),
        map(document_ref, Value::DocumentRef),
        map(reference, Value::Reference),
        // Lookup ref triplet: ("ref_type" "search_key" "pk") - must come before verb_call
        lookup_ref_triplet,
        map(string_literal, Value::String),
        number_literal,
        // Nested verb call with span tracking
        map(
            |i| verb_call_with_span(i, original_input),
            |vc| Value::NestedCall(Box::new(vc)),
        ),
        map(|i| list_literal_with_span(i, original_input), Value::List),
        map(map_literal, Value::Map),
    ))(input)
}

// String literals with escape sequences
fn string_literal<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, String, E> {
    delimited(
        char('"'),
        escaped_transform(
            none_of("\"\\"),
            '\\',
            alt((
                value('\n', char('n')),
                value('\r', char('r')),
                value('\t', char('t')),
                value('\\', char('\\')),
                value('"', char('"')),
            )),
        ),
        char('"'),
    )(input)
}

// Number literals (integer or decimal)
fn number_literal<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, Value, E> {
    let (remaining, num_str) = recognize(tuple((
        opt(char('-')),
        digit1,
        opt(pair(char('.'), digit1)),
    )))(input)?;

    if num_str.contains('.') {
        match Decimal::from_str(num_str) {
            Ok(d) => Ok((remaining, Value::Decimal(d))),
            Err(_) => Err(nom::Err::Error(E::from_error_kind(
                input,
                nom::error::ErrorKind::Float,
            ))),
        }
    } else {
        match num_str.parse::<i64>() {
            Ok(i) => Ok((remaining, Value::Integer(i))),
            Err(_) => Err(nom::Err::Error(E::from_error_kind(
                input,
                nom::error::ErrorKind::Digit,
            ))),
        }
    }
}

// Boolean literals
fn boolean_literal<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, bool, E> {
    alt((value(true, tag("true")), value(false, tag("false"))))(input)
}

// Null literal
fn null_literal<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, (), E> {
    value((), tag("nil"))(input)
}

// Reference: @identifier
fn reference<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, String, E> {
    let (input, _) = char('@')(input)?;
    // Don't match if followed by "attr{" or "doc{" (those are typed refs)
    if input.starts_with("attr{") || input.starts_with("doc{") {
        return Err(nom::Err::Error(E::from_error_kind(
            input,
            nom::error::ErrorKind::Verify,
        )));
    }
    let (input, name) = identifier(input)?;
    Ok((input, name.to_string()))
}

// Attribute reference: @attr{uuid}
fn attribute_ref<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, Uuid, E> {
    delimited(tag("@attr{"), uuid_parser, char('}'))(input)
}

// Document reference: @doc{uuid}
fn document_ref<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, Uuid, E> {
    delimited(tag("@doc{"), uuid_parser, char('}'))(input)
}

// Lookup reference triplet: ("ref_type" "search_key" "primary_key") or ("ref_type" "search_key" nil)
// This is the canonical format for all lookup references (entities, roles, jurisdictions, etc.)
//
// Examples:
//   ("proper_person" "John Smith" "550e8400-e29b-41d4-a716-446655440000")
//   ("role" "DIRECTOR" nil)
//   ("jurisdiction" "LU" "LU")
fn lookup_ref_triplet<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, Value, E> {
    let (input, _) = char('(')(input)?;
    let (input, _) = multispace0(input)?;

    // ref_type: the lookup type from verb definition
    let (input, ref_type) = string_literal(input)?;
    let (input, _) = multispace1(input)?;

    // search_key: human-readable identifier
    let (input, search_key) = string_literal(input)?;
    let (input, _) = multispace1(input)?;

    // primary_key: resolved key (UUID or code string) or nil if unresolved
    let (input, primary_key) = alt((
        // Quoted string for resolved primary key (UUID or code)
        map(string_literal, Some),
        // nil for unresolved
        map(tag("nil"), |_| None),
    ))(input)?;

    let (input, _) = multispace0(input)?;
    let (input, _) = char(')')(input)?;

    Ok((
        input,
        Value::LookupRef {
            ref_type,
            search_key,
            primary_key,
        },
    ))
}

// UUID parser
fn uuid_parser<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, Uuid, E> {
    let (remaining, uuid_str) = recognize(tuple((
        take_while1(|c: char| c.is_ascii_hexdigit()),
        char('-'),
        take_while1(|c: char| c.is_ascii_hexdigit()),
        char('-'),
        take_while1(|c: char| c.is_ascii_hexdigit()),
        char('-'),
        take_while1(|c: char| c.is_ascii_hexdigit()),
        char('-'),
        take_while1(|c: char| c.is_ascii_hexdigit()),
    )))(input)?;

    match Uuid::parse_str(uuid_str) {
        Ok(uuid) => Ok((remaining, uuid)),
        Err(_) => Err(nom::Err::Error(E::from_error_kind(
            input,
            nom::error::ErrorKind::Verify,
        ))),
    }
}

// List literal: [value, value, ...] or [value value ...]
fn list_literal<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, Vec<Value>, E> {
    let (input, _) = char('[')(input)?;
    let (input, _) = multispace0(input)?;

    // Parse values separated by comma or whitespace
    let mut values = Vec::new();
    let mut remaining = input;

    while let Ok((rest, val)) = value_parser::<E>(remaining) {
        values.push(val);
        remaining = rest;

        // Skip whitespace
        let (rest, _) = multispace0::<_, E>(remaining)?;
        remaining = rest;

        // Check for comma separator (optional)
        if let Ok((rest, _)) = char::<_, E>(',')(remaining) {
            let (rest, _) = multispace0::<_, E>(rest)?;
            remaining = rest;
        }
    }

    let (input, _) = multispace0(remaining)?;
    let (input, _) = char(']')(input)?;

    Ok((input, values))
}

/// List literal with span tracking for nested verb calls
fn list_literal_with_span<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
    original_input: &'a str,
) -> IResult<&'a str, Vec<Value>, E> {
    let (input, _) = char('[')(input)?;
    let (input, _) = multispace0(input)?;

    let mut values = Vec::new();
    let mut remaining = input;

    while let Ok((rest, val)) = value_parser_with_span::<E>(remaining, original_input) {
        values.push(val);
        remaining = rest;

        let (rest, _) = multispace0::<_, E>(remaining)?;
        remaining = rest;

        if let Ok((rest, _)) = char::<_, E>(',')(remaining) {
            let (rest, _) = multispace0::<_, E>(rest)?;
            remaining = rest;
        }
    }

    let (input, _) = multispace0(remaining)?;
    let (input, _) = char(']')(input)?;

    Ok((input, values))
}

// Map literal: {:key value :key2 value2}
fn map_literal<'a, E: NomParseError<&'a str> + ContextError<&'a str>>(
    input: &'a str,
) -> IResult<&'a str, HashMap<String, Value>, E> {
    delimited(
        char('{'),
        map(
            many0(delimited(
                multispace0,
                pair(map_key, preceded(multispace1, value_parser)),
                multispace0,
            )),
            |pairs| pairs.into_iter().collect(),
        ),
        char('}'),
    )(input)
}

fn map_key<'a, E: NomParseError<&'a str>>(input: &'a str) -> IResult<&'a str, String, E> {
    preceded(char(':'), kebab_identifier)(input)
}

// ============================================================================
// Tests
// ============================================================================

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_simple_verb_call() {
        let input = r#"(entity.create-limited-company :name "Acme Corp")"#;
        let result = parse_program(input).unwrap();

        assert_eq!(result.statements.len(), 1);
        if let Statement::VerbCall(vc) = &result.statements[0] {
            assert_eq!(vc.domain, "entity");
            assert_eq!(vc.verb, "create-limited-company");
            assert_eq!(vc.arguments.len(), 1);
            assert!(vc.arguments[0].key.matches("name"));
            assert_eq!(vc.arguments[0].value.as_string(), Some("Acme Corp"));
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_cbu_link_with_reference() {
        let input = r#"(cbu.link :cbu-id @cbu :entity-id @aviva :role "InvestmentManager")"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            assert_eq!(vc.domain, "cbu");
            assert_eq!(vc.verb, "link");
            assert_eq!(vc.arguments.len(), 3);

            // Check reference
            assert!(vc.arguments[0].value.is_reference());
            assert_eq!(vc.arguments[0].value.as_reference(), Some("cbu"));
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_attribute_ref() {
        let input =
            r#"(attr.set :attr-id @attr{550e8400-e29b-41d4-a716-446655440000} :value "test")"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            if let Value::AttributeRef(uuid) = &vc.arguments[0].value {
                assert_eq!(uuid.to_string(), "550e8400-e29b-41d4-a716-446655440000");
            } else {
                panic!("Expected AttributeRef");
            }
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_number_literals() {
        let input = r#"(test.verb :int 42 :neg -17 :dec 3.14 :neg-dec -0.5)"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            assert!(matches!(&vc.arguments[0].value, Value::Integer(42)));
            assert!(matches!(&vc.arguments[1].value, Value::Integer(-17)));
            assert!(matches!(&vc.arguments[2].value, Value::Decimal(_)));
            assert!(matches!(&vc.arguments[3].value, Value::Decimal(_)));
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_list_and_map() {
        let input = r#"(test.verb :list [1, 2, 3] :map {:a 1 :b 2})"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            if let Value::List(items) = &vc.arguments[0].value {
                assert_eq!(items.len(), 3);
            } else {
                panic!("Expected List");
            }

            if let Value::Map(m) = &vc.arguments[1].value {
                assert_eq!(m.len(), 2);
                assert!(m.contains_key("a"));
                assert!(m.contains_key("b"));
            } else {
                panic!("Expected Map");
            }
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_list_without_commas() {
        let input = r#"(test.verb :list ["a" "b" "c"])"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            if let Value::List(items) = &vc.arguments[0].value {
                assert_eq!(items.len(), 3);
            } else {
                panic!("Expected List");
            }
        }
    }

    #[test]
    fn test_comment() {
        let input = r#";; This is a comment
(entity.create :name "Test")"#;
        let result = parse_program(input).unwrap();

        assert_eq!(result.statements.len(), 2);
        assert!(matches!(&result.statements[0], Statement::Comment(c) if c == "This is a comment"));
        assert!(matches!(&result.statements[1], Statement::VerbCall(_)));
    }

    #[test]
    fn test_multiline_program() {
        let input = r#"
;; Create a CBU
(cbu.create :name "Test Fund" :jurisdiction "LU")

;; Link an entity
(cbu.link :cbu-id @cbu :entity-id @manager :role "InvestmentManager")
"#;
        let result = parse_program(input).unwrap();
        assert_eq!(result.statements.len(), 4); // 2 comments + 2 verb calls
    }

    #[test]
    fn test_dotted_keyword() {
        let input = r#"(test.verb :address.city "London")"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            assert!(
                matches!(&vc.arguments[0].key, Key::Dotted(parts) if parts == &["address", "city"])
            );
        }
    }

    #[test]
    fn test_escape_sequences() {
        let input = r#"(test.verb :text "line1\nline2\ttab")"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            assert_eq!(vc.arguments[0].value.as_string(), Some("line1\nline2\ttab"));
        }
    }

    #[test]
    fn test_empty_program() {
        let input = "";
        let result = parse_program(input).unwrap();
        assert!(result.statements.is_empty());
    }

    #[test]
    fn test_whitespace_only() {
        let input = "   \n\n   \t  ";
        let result = parse_program(input).unwrap();
        assert!(result.statements.is_empty());
    }

    #[test]
    fn test_parse_error_unclosed_paren() {
        let input = r#"(entity.create :name "Test""#;
        let result = parse_program(input);
        assert!(result.is_err());
    }

    #[test]
    fn test_parse_single_verb() {
        let input = r#"(cbu.create :name "Fund")"#;
        let vc = parse_single_verb(input).unwrap();
        assert_eq!(vc.domain, "cbu");
        assert_eq!(vc.verb, "create");
    }

    #[test]
    fn test_nested_verb_call() {
        // Nested verb calls in a list - the core use case for CBU with roles
        let input = r#"(cbu.create :name "Fund" :roles [(cbu.assign-role :entity-id @aviva :role "Manager")])"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            assert_eq!(vc.domain, "cbu");
            assert_eq!(vc.verb, "create");

            // Find the :roles argument
            let roles_arg = vc.arguments.iter().find(|a| a.key.canonical() == "roles");
            assert!(roles_arg.is_some());

            if let Value::List(items) = &roles_arg.unwrap().value {
                assert_eq!(items.len(), 1);
                if let Value::NestedCall(nested) = &items[0] {
                    assert_eq!(nested.domain, "cbu");
                    assert_eq!(nested.verb, "assign-role");
                } else {
                    panic!("Expected NestedCall in list");
                }
            } else {
                panic!("Expected List for :roles");
            }
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_nested_verb_call_multiple() {
        // Multiple nested verb calls
        let input = r#"(cbu.create :name "Fund" :roles [
            (cbu.assign-role :entity-id @aviva :role "Manager")
            (cbu.assign-role :entity-id @bob :role "Director")
        ])"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            let roles_arg = vc
                .arguments
                .iter()
                .find(|a| a.key.canonical() == "roles")
                .unwrap();
            if let Value::List(items) = &roles_arg.value {
                assert_eq!(items.len(), 2);
                assert!(matches!(&items[0], Value::NestedCall(_)));
                assert!(matches!(&items[1], Value::NestedCall(_)));
            } else {
                panic!("Expected List");
            }
        }
    }

    #[test]
    fn test_lookup_ref_triplet_with_uuid() {
        // Lookup reference triplet with resolved UUID: (ref_type search_key primary_key)
        let input = r#"(cbu.assign-role :entity-id ("proper_person" "John Smith" "550e8400-e29b-41d4-a716-446655440000") :role "DIRECTOR")"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            let entity_arg = vc
                .arguments
                .iter()
                .find(|a| a.key.canonical() == "entity-id")
                .unwrap();

            match &entity_arg.value {
                Value::LookupRef {
                    ref_type,
                    search_key,
                    primary_key,
                } => {
                    assert_eq!(ref_type, "proper_person");
                    assert_eq!(search_key, "John Smith");
                    assert!(primary_key.is_some());
                    assert_eq!(
                        primary_key.as_ref().unwrap(),
                        "550e8400-e29b-41d4-a716-446655440000"
                    );
                }
                _ => panic!("Expected LookupRef, got {:?}", entity_arg.value),
            }
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_lookup_ref_triplet_with_nil() {
        // Lookup reference triplet with unresolved (nil) primary key
        let input =
            r#"(cbu.assign-role :entity-id ("proper_person" "John Smith" nil) :role "DIRECTOR")"#;
        let result = parse_program(input).unwrap();

        if let Statement::VerbCall(vc) = &result.statements[0] {
            let entity_arg = vc
                .arguments
                .iter()
                .find(|a| a.key.canonical() == "entity-id")
                .unwrap();

            match &entity_arg.value {
                Value::LookupRef {
                    ref_type,
                    search_key,
                    primary_key,
                } => {
                    assert_eq!(ref_type, "proper_person");
                    assert_eq!(search_key, "John Smith");
                    assert!(primary_key.is_none());
                }
                _ => panic!("Expected LookupRef, got {:?}", entity_arg.value),
            }
        } else {
            panic!("Expected VerbCall");
        }
    }

    #[test]
    fn test_lookup_ref_triplet_for_role() {
        // Lookup reference triplet for non-UUID lookups (role codes)
        let input = r#"(cbu.assign-role :entity-id @john :role ("role" "DIRECTOR" "DIRECTOR"))"#;
        let result = parse_program(input).unwrap();
